# Tonic

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.bat  clean.bat
core/: camera.cpp  display.cpp  engine.cpp  game_object.cpp  input.cpp  scene.cpp  sound.cpp
error/: error.cpp
include/engine/: camera.h  color.h  display.h  engine.h  error.h  framebuffer.h  game_object.h  input.h  mathf.h  mesh.h  render_context.h  renderer.h  scene.h  screen_quad.h  shader.h  shader_manager.h  sound.h  sprite.h  texture.h  ttfont.h  util.h
renderer/: framebuffer.cpp  mesh.cpp  render_context.cpp  renderer.cpp  screen_quad.cpp  shader.cpp  shader_manager.cpp  texture.cpp  ttfont.cpp
shaders/: default.frag  default.vert  framebuffer.frag  framebuffer.vert  quad.frag  quad.vert  shape.frag  shape.vert  sprite.frag  sprite.vert
test/: main.cpp  test.cpp
util/: mathf.cpp  util.cpp
